Update 'e4797cgv6-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:dd348f98725d3ebc4bcdae7acd538c4889f9ea10@sha256:a43a50253de5d2c27a6ec94f8e57b7384e74318cb1fca09e91f55a93c7d00ae0

--- a/components/e4797cgv6-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/e4797cgv6-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: e4797cgv6-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:dd348f98725d3ebc4bcdae7acd538c4889f9ea10@sha256:a43a50253de5d2c27a6ec94f8e57b7384e74318cb1fca09e91f55a93c7d00ae0
+          name: container-image
